# metasage

./: .gitignore  Feature_generation.py  Predictability_assessment.py  README.md  Regulator_prioritization.py  Supporting_functions.py  example_config.toml  package.json  pyproject.toml
Example_files/: ESTIMATE_score_result.txt  meta_gene_relation_file.tsv  metabolite_expression_file.tsv  predictability_assessment_results.tsv
Example_files/feature/: 1-Methylhistamine.tsv  5,8,11-Eicosatrienoic acid.tsv  5-Androstenediol.tsv  6-Phosphogluconic acid.tsv  ADP.tsv  Acetaminophen.tsv  Acetylcholine.tsv  Adipic acid.tsv  Allantoin.tsv  Carnosine.tsv  Chenodeoxycholic acid glycine conjugate.tsv  Chenodeoxycholic acid.tsv  Cholic acid.tsv  Cysteinylglycine.tsv  D-Glucose.tsv  D-Maltose.tsv  Deoxyinosine.tsv  Dihydrothymine.tsv  Docosatrienoic acid.tsv  Dodecanoylcarnitine.tsv  Gluconic acid.tsv  Glutathione.tsv  Glycocholic acid.tsv  Glycoursodeoxycholic acid.tsv  Guanidoacetic acid.tsv  Guanine.tsv  Histamine.tsv  Hypotaurine.tsv  Kynurenic acid.tsv  L-Cystine.tsv  LysoPC(18:0 or 0:0).tsv  LysoPC(18:1(9Z) or 0:0).tsv  MG(0:0 or 20:4(5Z,8Z,11Z,14Z) or 0:0).tsv  Maltotetraose.tsv  Maltotriose.tsv  N1-Acetylspermine.tsv  NADH.tsv  Nicotinamide ribotide.tsv  Phenylpyruvic acid.tsv  Quinolinic acid.tsv  (+8 more)
Example_files/regulator_prioritization/: D-Maltose.tsv
src/: app.css
src/content/blog/: test.svx
src/metasage/: __init__.py  analysis.py  build.py  config.py  train.py
src/routes/: +page.svelte
static/downloads/: all_metabolite_data.tar.xz  chart_data.tar.xz
(+20 files in other folders)
