[project]
name = "metasage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "John Elizarraras", email = "elizarrj27@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "tomli-w>=1.2.0",
    "typer>=0.16.0",
    "xgboost>=3.0.2",
]

[project.scripts]
metasage = "metasage:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
